<resources>
    <string name="app_name">Wownet</string>
    <string name="title_home">Home</string>
    <string name="title_news">Articles</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="sample_title_articles">Tips dan Trik Cara Memilih Internet Service Provider</string>
    <string name="sample_publish_date">01 Januari 2023</string>
    <string name="sample_description_articles">Memilih ISP adalah hal yang penting dalam kehidupan sekarang, dikarenakan kebanyakan ter-digitalisasi maka dibutuhkan koneksi yang handal untuk memperoleh koneksi internet yang stabil.</string>
    <string name="see_more">Artikel lainnya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tab1">On Going</string>
    <string name="tab2">Successful</string>
    <string name="tab3">Unsuccessful</string>

    <string-array name="programming_languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>C++</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>C++</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>C++</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>C++</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>C++</item>
    </string-array>
</resources>