<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.capstoneproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.capstoneproject.ui.articles.ArticlesFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_articles">

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.capstoneproject.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.capstoneproject.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">

    </fragment>
</navigation>