<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.articles.detail_article.DetailArticleActivity"
    android:background="@color/primaryColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/icon_back"
            app:title="Articles"
            app:titleTextColor="@color/white"
            android:backgroundTint="@color/contentColor"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightPrimaryColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="NotSibling">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/article_item_bg"
                        android:orientation="vertical"
                        android:paddingHorizontal="14dp"
                        android:paddingVertical="12dp">

                        <TextView
                            android:id="@+id/title_article"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/sample_title_articles"
                            android:textColor="@color/secondaryColor"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/publish_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/sample_publish_date"
                            android:textColor="@color/secondaryColor"
                            android:textSize="14sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_title">

                    <ImageView
                        android:id="@+id/img_articles"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_image">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/article_item_bg"
                        android:orientation="vertical"
                        android:paddingHorizontal="14dp"
                        android:paddingVertical="12dp">

                        <TextView
                            android:id="@+id/desc_article"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_medium"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/sample_description_articles"
                            android:textColor="@color/secondaryColor"
                            android:textSize="16sp"
                            app:layout_constraintTop_toBottomOf="@+id/card_image" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/text_see_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="O T H E R  A R T I C L E S"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_see_more"
                tools:layout_editor_absoluteX="-186dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_articles_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:backgroundTint="@color/primaryColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/articles_more_items" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>